overview prices issues with text wrapping v16.0

--- a/src/app/prices/overview-prices/overview-prices.component.css
+++ b/src/app/prices/overview-prices/overview-prices.component.css
@@ -44,7 +44,6 @@
 
 .table-with-dates-date-cell {
   padding-right: 10px;
-  position: -ms-device-fixed;
 }
 
 .table-with-prices-price-cell {
